# kolla-ansible

./: .ansible-lint  .ansible-lint-ignore  .codespell-ignore  .gitignore  .gitreview  .stestr.conf  .yamllint  .zuul.yaml  CONTRIBUTING.rst  README.rst  bindep.txt  lint-requirements.txt  lower-constraints.txt  pyproject.toml  requirements-core.yml  requirements.txt  requirements.yml  setup.cfg  test-requirements.txt  tox.ini
.ansible-lint-rules/: container_exec_become.py  kolla_container_become.py
.github/: CODEOWNERS
.github/workflows/: upstream-sync.yml
ansible/: bifrost.yml  certificates.yml  chrony-cleanup.yml  destroy.yml  detect-release.yml  gather-facts.yml  kolla-host.yml  mariadb-backup.yml  mariadb.yml  mariadb_backup.yml  mariadb_recovery.yml  migrate-container-engine.yml  migrate-valkey.yml  monasca_cleanup.yml  nova-libvirt-cleanup.yml  nova.yml  octavia-certificates.yml  opensearch-migration.yml  post-deploy.yml  prune-images.yml  rabbitmq-reset-state.yml  rabbitmq-upgrade.yml  rabbitmq.yml  site.yml  stop.yml
ansible/action_plugins/: merge_configs.py  merge_yaml.py
ansible/filter_plugins/: address.py  database.py  services.py
ansible/group_vars/: all.yml
ansible/inventory/: all-in-one  multinode
ansible/module_utils/: kolla_container_worker.py  kolla_docker_worker.py  kolla_podman_worker.py  kolla_systemd_worker.py
ansible/roles/: ceph_pools.yml
ansible/templates/: clouds.yaml.j2
contrib/bash-completion/: kolla-ansible
deploy-guide/source/: advanced-configuration.rst  bifrost.rst  central-logging-guide.rst  ceph-guide.rst  cinder-guide-hnas.rst  cinder-guide.rst  conf.py  deployment-philosophy.rst  designate-guide.rst  external-ceph-guide.rst  get-started.rst  index.rst  ironic-guide.rst  kibana-guide.rst  kolla-ansible-index.rst  kuryr-guide.rst  manila-guide.rst  manila-hnas-guide.rst  multinode.rst  networking-guide.rst  next-steps.rst  nova-fake-driver.rst  operating-kolla.rst  production-architecture-guide.rst  quickstart.rst  security.rst  swift-guide.rst  troubleshooting.rst  vagrant-dev-env.rst
doc/: CONTRIBUTING.rst  advanced-configuration.rst  bifrost.rst  central-logging-guide.rst  ceph-guide.rst  cinder-guide-hnas.rst  cinder-guide.rst  deployment-philosophy.rst  designate-guide.rst  external-ceph-guide.rst  hyperv-guide.rst  image-building.rst  index.rst  ironic-guide.rst  kolla-for-openstack-development.rst  manila-hnas-guide.rst  multi-regions.rst  multinode.rst  networking-guide.rst  operating-kolla.rst  osprofiler-guide.rst  production-architecture-guide.rst  quickstart.rst  requirements.txt  running-tests.rst  skydive-guide.rst  swift-guide.rst  tacker-guide.rst  troubleshooting.rst  vagrant-dev-env.rst  vmware-guide.rst  zun-guide.rst
doc/source/: conf.py  index.rst
doc/test/: redirect-tests.txt
etc/kolla/: globals.yml  passwords.yml
kolla/: __init__.py
kolla/cmd/: genpwd.py  mergepwd.py
kolla_ansible/: ansible.py  database_shards.py  exception.py  filters.py  fluentd_filters.py  hashi_vault.py  helpers.py  kolla_address.py  kolla_url.py  nova_filters.py  put_address_in_context.py  utils.py  version.py
kolla_ansible/cli/: commands.py
kolla_ansible/cmd/: genpwd.py  kolla_ansible.py  mergepwd.py  readpwd.py  writepwd.py
releasenotes/notes/: 1875223-05552108375d005a.yaml  Fix-proxysql-mariadb-backup-database-password-54f43ecf102fb897.yaml  HAProxy-Alertmanager-health-checks-83f260e6ba8b8254.yaml  add-a-flag-to-handle-rabbitmq-high-availability-44c709318be6cb7b.yaml  add-alertmanager-metrics-a8d87b0793f2255a.yaml  add-barbican-p11-password-a05ed037fe84d1f4.yaml  add-blazar-dashboard-g6595d27c034f8xc.yaml  add-ceilometer-ipmi-b646f886666889a1.yaml  add-ceph-metrics-scrape-interval-3ee39fba696860e9.yaml  add-cinder-backend-name-variables-edcc4a675ca06c0c.yaml  add-cinder-quobyte-support-0de697a0800fb962.yaml  add-congress-dashboard-q65x5d27c034f8xc.yaml  add-container-deploy-action-1673f3b6eb330c74.yaml  add-custom-elasticsearch-conf-6fc34fbc3b471997.yaml  add-cyborg-c7ee957a2cbe8e99.yaml  add-designate-bind-mdns-123e79587bb06072.yaml  add-designate-producer-b6e94153ff9bc45c.yaml  add-docker-image-name-prefix-1503a64978740808.yaml  add-extra-network-node-4b6e4e2663950b9c.yaml  add-firewalld-rules-based-on-enabled-services-96dd418219953a05.yaml  add-fluentd-role-bc3f4976c807a50b.yaml  (+1304 more)
specs/: ansible-multi.rst  centos8-migration.rst  ceph-ansible.rst  containerize-openstack.rst  high-availability.rst  internal-tls-endpoints.rst  kubernetes-deployment.rst  logging-with-heka.rst  multiple-globals-files.rst  prometheus.rst  quobyte-cinder.rst  template.rst
tests/: ansible_generate_config.yml  ansible_generate_inventory.yml  ansible_get_logs.yml  ansible_setup_ceph_disks.yml  ara-readme.md.j2  check-config.sh  check-failure.sh  check-logs.sh  deploy-bifrost.sh  deploy-ceph-ansible.sh  deploy-tenks.sh  deploy.sh  get_logs.sh  init-core-openstack.sh  init-swift.sh  j2lint.py  kolla-toolbox-testsuite.yml  link-module-utils.sh  post.yml  pre.yml  rabbitmq-version-upgrade.sh  reconfigure.sh  run-hashi-vault.yml  run-openbao.yml  run.yml  setup_ceph_disks.sh  setup_disks.sh  setup_gate.sh  test-bifrost.sh  test-container-engine-migration.sh  test-core-openstack.sh  test-dashboard.sh  test-hashicorp-vault-passwords.sh  test-ironic.sh  test-kolla-toolbox.yml  test-magnum.sh  test-mariadb.sh  test-masakari.sh  test-monasca.sh  test-octavia.sh  (+23 more)
tools/: cleanup-containers  cleanup-host  cleanup-images  deploy_aio.sh  diag  generate_passwords.py  init-runonce  init-runonce.config  init-vpn  kolla-ansible  kolla-libvirt-guests-docker.service  kolla-libvirt-guests-podman.service  loc  merge_passwords.py  ovs-dpdkctl.sh  playbook-setup-nodes.yml  pre-commit-hook  read_passwords.py  run-bashate.sh  setup-compute-libvirt.yml  setup_Debian.sh  setup_RedHat.sh  setup_gate.sh  stop-containers  validate-all-file.py  validate-all-yaml.sh  validate-docker-execute.sh  validate-yaml.py  virt-guest-shutdown.target  write_passwords.py
zuul.d/: base.yaml  deploy-guide.yaml  jobs.yaml  nodesets.yaml  project.yaml  python3-jobs.yaml
(+2691 files in other folders)
