[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "kolla-ansible"
description = "Ansible Deployment of Kolla containers"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = "Apache-2.0"
dynamic = ["version", "dependencies"]
requires-python = ">=3.11"
classifiers = [
    "Environment :: OpenStack",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://docs.openstack.org/kolla-ansible/latest/"

[project.scripts]
kolla-genpwd = "kolla_ansible.cmd.genpwd:main"
kolla-mergepwd = "kolla_ansible.cmd.mergepwd:main"
kolla-writepwd = "kolla_ansible.cmd.writepwd:main"
kolla-readpwd = "kolla_ansible.cmd.readpwd:main"
kolla-ansible = "kolla_ansible.cmd.kolla_ansible:main"

[project.entry-points."kolla_ansible.cli"]
gather-facts = "kolla_ansible.cli.commands:GatherFacts"
install-deps = "kolla_ansible.cli.commands:InstallDeps"
prechecks = "kolla_ansible.cli.commands:Prechecks"
genconfig = "kolla_ansible.cli.commands:GenConfig"
reconfigure = "kolla_ansible.cli.commands:Reconfigure"
validate-config = "kolla_ansible.cli.commands:ValidateConfig"
bootstrap-servers = "kolla_ansible.cli.commands:BootstrapServers"
pull = "kolla_ansible.cli.commands:Pull"
certificates = "kolla_ansible.cli.commands:Certificates"
octavia-certificates = "kolla_ansible.cli.commands:OctaviaCertificates"
deploy = "kolla_ansible.cli.commands:Deploy"
deploy-containers = "kolla_ansible.cli.commands:DeployContainers"
post-deploy = "kolla_ansible.cli.commands:Postdeploy"
upgrade = "kolla_ansible.cli.commands:Upgrade"
stop = "kolla_ansible.cli.commands:Stop"
destroy = "kolla_ansible.cli.commands:Destroy"
prune-images = "kolla_ansible.cli.commands:PruneImages"
deploy-bifrost = "kolla_ansible.cli.commands:BifrostDeploy"
deploy-servers = "kolla_ansible.cli.commands:BifrostDeployServers"
upgrade-bifrost = "kolla_ansible.cli.commands:BifrostUpgrade"
rabbitmq-reset-state = "kolla_ansible.cli.commands:RabbitMQResetState"
mariadb-backup = "kolla_ansible.cli.commands:MariaDBBackup"
mariadb-recovery = "kolla_ansible.cli.commands:MariaDBRecovery"
nova-libvirt-cleanup = "kolla_ansible.cli.commands:NovaLibvirtCleanup"
check = "kolla_ansible.cli.commands:Check"
migrate-container-engine = "kolla_ansible.cli.commands:MigrateContainerEngine"

[tool.setuptools.packages.find]
include = ["kolla_ansible*"]
