[metadata]
name = kolla-ansible
summary = Ansible Deployment of Kolla containers
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/kolla-ansible/latest/
python_requires = >=3.10
license = Apache License, Version 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    kolla_ansible
data_files =
    share/kolla-ansible/ansible = ansible/*
    share/kolla-ansible/tools = tools/validate-docker-execute.sh
    share/kolla-ansible/tools = tools/cleanup-containers
    share/kolla-ansible/tools = tools/cleanup-host
    share/kolla-ansible/tools = tools/cleanup-images
    share/kolla-ansible/doc = doc/*
    share/kolla-ansible/etc_examples = etc/*
    share/kolla-ansible = tools/init-runonce
    share/kolla-ansible = tools/init-vpn
    share/kolla-ansible = setup.cfg
    share/kolla-ansible = requirements.yml
    share/kolla-ansible = requirements-core.yml

[entry_points]
console_scripts =
    kolla-genpwd = kolla_ansible.cmd.genpwd:main
    kolla-mergepwd = kolla_ansible.cmd.mergepwd:main
    kolla-writepwd = kolla_ansible.cmd.writepwd:main
    kolla-readpwd = kolla_ansible.cmd.readpwd:main
    kolla-ansible = kolla_ansible.cmd.kolla_ansible:main

kolla_ansible.cli =
    gather-facts = kolla_ansible.cli.commands:GatherFacts
    install-deps = kolla_ansible.cli.commands:InstallDeps
    prechecks = kolla_ansible.cli.commands:Prechecks
    genconfig = kolla_ansible.cli.commands:GenConfig
    reconfigure = kolla_ansible.cli.commands:Reconfigure
    validate-config = kolla_ansible.cli.commands:ValidateConfig
    bootstrap-servers = kolla_ansible.cli.commands:BootstrapServers
    pull = kolla_ansible.cli.commands:Pull
    certificates = kolla_ansible.cli.commands:Certificates
    octavia-certificates = kolla_ansible.cli.commands:OctaviaCertificates
    deploy = kolla_ansible.cli.commands:Deploy
    deploy-containers = kolla_ansible.cli.commands:DeployContainers
    post-deploy = kolla_ansible.cli.commands:Postdeploy
    upgrade = kolla_ansible.cli.commands:Upgrade
    stop = kolla_ansible.cli.commands:Stop
    destroy = kolla_ansible.cli.commands:Destroy
    prune-images = kolla_ansible.cli.commands:PruneImages
    deploy-bifrost = kolla_ansible.cli.commands:BifrostDeploy
    deploy-servers = kolla_ansible.cli.commands:BifrostDeployServers
    upgrade-bifrost = kolla_ansible.cli.commands:BifrostUpgrade
    rabbitmq-reset-state = kolla_ansible.cli.commands:RabbitMQResetState
    mariadb-backup = kolla_ansible.cli.commands:MariaDBBackup
    mariadb-recovery = kolla_ansible.cli.commands:MariaDBRecovery
    nova-libvirt-cleanup = kolla_ansible.cli.commands:NovaLibvirtCleanup
    check = kolla_ansible.cli.commands:Check
    migrate-container-engine = kolla_ansible.cli.commands:MigrateContainerEngine
